fix background overflow for start animation

--- a/app/globals.css
+++ b/app/globals.css
@@ -18,6 +18,7 @@ section {
 
 body {
   min-height: 100vh;
+  overflow: hidden;
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
@@ -25,6 +26,7 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+  animation: overflow 0.1s 5s forwards;
 }
 
 a {
@@ -290,5 +292,14 @@ footer {
   }
   100% {
     transform: scale(1);
+  }
+}
+
+@keyframes overflow {
+  from {
+    overflow: hidden;
+  }
+  to {
+    overflow: auto;
   }
 }
